# pytest-isolate-mpi

./: .gitignore  .readthedocs.yaml  CHANGES.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml  pythonpackage.yml
docs/: conf.py  index.rst  introduction.rst  related_work.rst  usage.rst
docs/_static/: dlr.css
examples/: pytest.ini  test_mpi.py
src/pytest_isolate_mpi/: __init__.py  __main__.py  _constants.py  _fixturecache.py  _fixtures.py  _helpers.py  _plugin.py  _subsession.py  _version.py  core.py  plugin.py
tests/: test_core.py  test_plugin.py  test_subsession.py
