[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "pytest-isolate-mpi"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.md"}
version = "0.1.0"
keywords = []
authors = [
  { name = "gilfree", email = "gilfree@users.noreply.github.com" },
]

[project.entry-points.pytest11]
pytest_isolate_mpi = "pytest_isolate_mpi.plugin"


[tool.black]
target_version = ["py38"]
line-length = 120


[tool.pylint.format]
max-line-length = 120

[tool.pylint.MASTER]
extension-pkg-whitelist = "mpi4py.MPI"
