[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"


[project]
name = "pytest-isolate-mpi"
description = "pytest-isolate-mpi allows for MPI-parallel tests being executed in a segfault and MPI_Abort safe manner"
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dynamic = ["version"]
keywords = []
authors = [
  { name = "Sebastian Gottfried", email = "sebastian.gottfried@dlr.de" },
  { name = "Jordan Lavialle"},
  { name = "Immo Huismann", email = "immo.huismann@dlr.de" },
]
classifiers = [
  "Development Status :: 2 - Alpha",
  "Programming Language :: Python",
  "Framework :: Pytest",
]
dependencies = [
    "pytest >= 5",
    "mpi4py",
]


[project.optional-dependencies]
dev = [
    "check-manifest",
    "Sphinx<7",
    "sphinx-rtd-theme<2",
    "docutils<0.19",
    "pylint",
    "pytest-cov",
    "wheel",
    "numpy",
    "black",
    "pycodestyle",
]


# FIXME: Update these ofter OSS release
# [project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
# Repository = "https://github.com/me/spam.git"
# "Bug Tracker" = "https://github.com/me/spam/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"


[project.entry-points.pytest11]
pytest_isolate_mpi = "pytest_isolate_mpi.plugin"


[tool.setuptools_scm]


[tool.black]
target_version = ["py38"]
line-length = 120


[tool.pylint.MASTER]
max-line-length = 120
extension-pkg-whitelist = "mpi4py.MPI"
recursive = true
ignore = ["venv", "build", "dist"]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "fixme",
]
good-names-rgxs = "^[_a-z][_a-z0-9]?$"


[tool.distutils.bdist_wheel]
universal = true


[tool.check-manifest]
ignore = [
    ".gitlab-ci.yml"
]
